; ModuleID = '/home/carl/AnghaBench/mozjpeg/extr_rdjpgcom.c_read_1_byte.c'
source_filename = "/home/carl/AnghaBench/mozjpeg/extr_rdjpgcom.c_read_1_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EOF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Premature EOF in JPEG file\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @read_1_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_1_byte() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @NEXTBYTE()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @EOF, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @ERREXIT(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %0
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}

declare dso_local i32 @NEXTBYTE(...) #1

declare dso_local i32 @ERREXIT(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
